Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10142 PL/SQL parser
  3. MDEV-12143

sql_mode=ORACLE: Make the CONCAT function ignore NULL arguments

    XMLWordPrintable

Details

    Description

      Under terms of MDEV-11880, we fixed the concatenation operator || to ignore NULL arguments.

      In addition to the concatenation operator, Oracle has also the function CONCAT with two arguments, so these two queries should be equivalent:

      SELECT a||b FROM t1;
      SELECT CONCAT(a,b) FROM t1;
      

      The patch for MDEV-11880 changed only behavior of the concatenation operator ||.
      Under terms of this task we'll also change CONCAT to ignore NULL arguments.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 3h
                  3h
                  Remaining:
                  Time Spent - 1.5h Remaining Estimate - 1.5h
                  1.5h
                  Logged:
                  Time Spent - 1.5h Remaining Estimate - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.