MDEV-12143 sql_mode=ORACLE: make the CONCAT function ignore NULL arguments